# scoopdope

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY_544-547.md  IMPLEMENTATION_SUMMARY_548-551.md  PR_DESCRIPTION_287.md  PR_DESCRIPTION_288.md  docker-compose.monitoring.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  release-notes.md  stryker.conf.js
.stryker-tmp/sandbox-yg13hH/: .env.example  .gitignore  CI_CD_IMPROVEMENTS_SUMMARY.md  Cargo.toml  TESTING_ENHANCEMENTS_SUMMARY.md  docker-compose.prod.yml  node_modules  package-lock.json  package.json  release-please-config.json  stryker.conf.js
.stryker-tmp/sandbox-yg13hH/.github/ISSUE_TEMPLATE/: bug_report.md
.stryker-tmp/sandbox-yg13hH/.github/workflows/: blue-green-deployment.yml  conventional-commits.yml  deploy-production.yml  performance-regression-testing.yml  semantic-versioning.yml  terraform.yml
.stryker-tmp/sandbox-yg13hH/apps/backend/: node_modules
.stryker-tmp/sandbox-yg13hH/apps/frontend/: middleware.ts  (+1 more)
.stryker-tmp/sandbox-yg13hH/docs/: accessibility-testing.md  analytics-guide.md  architecture.md  aws-oidc.md  contracts.md  cors-policy.md  data-privacy-gdpr.md  load-testing.md  migrations.md  monitoring.md  mutation-testing.md  notifications-guide.md  performance-optimization.md  scripts.md  smart-contract-interaction-guide.md  stellar-auth.md  testing-strategy.md  user-rate-limiting.md
.stryker-tmp/sandbox-yg13hH/scripts/: compare-performance.js  parse-k6-results.js
contracts/grants/: Cargo.toml
contracts/grants/src/: lib.rs
(+1339 files in other folders)
