[package]
name = "scoopdope-grants"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { version = "21.7", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.7", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
